[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/start_scene.gd" type="Script" id=1]
[ext_resource path="res://Textures/menu_icon.png" type="Texture" id=2]
[ext_resource path="res://Textures/menu_start_icon.png" type="Texture" id=3]
[ext_resource path="res://Textures/menu_start_icon2.png" type="Texture" id=4]
[ext_resource path="res://Textures/menu_exit_icon1.png" type="Texture" id=5]
[ext_resource path="res://Textures/menu_exit_icon2.png" type="Texture" id=6]
[ext_resource path="res://Textures/menu_difficulty7.png" type="Texture" id=7]
[ext_resource path="res://Textures/menu_difficulty8.png" type="Texture" id=8]
[ext_resource path="res://Textures/menu_turn1.png" type="Texture" id=9]
[ext_resource path="res://Textures/menu_turn2.png" type="Texture" id=10]
[ext_resource path="res://Textures/bg.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 9, 4 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 9, 4 )

[node name="start_scene" type="Node2D"]

script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="menu_icon" type="Sprite" parent="." index="0"]

position = Vector2( 28, 6 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="start_button" type="TouchScreenButton" parent="." index="1"]

position = Vector2( 52, 42 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
bitmask = null
shape = SubResource( 1 )
shape_centered = true
shape_visible = false
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Hint", "Rect", "Transform", "Visibility" ]

[node name="exit_button" type="TouchScreenButton" parent="." index="2"]

position = Vector2( 52, 56 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = false
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="difficulty_button" type="TouchScreenButton" parent="." index="3"]

position = Vector2( 72, 42 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="turn_button" type="TouchScreenButton" parent="." index="4"]

position = Vector2( 40, 42 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="bg" type="CanvasLayer" parent="." index="5"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="bg" type="Sprite" parent="bg" index="0"]

scale = Vector2( 0.47, 0.49 )
texture = ExtResource( 11 )
centered = false
region_rect = Rect2( 50, 30, 120, 60 )
_sections_unfolded = [ "Animation", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="released" from="start_button" to="." method="_on_start_button_released"]

[connection signal="released" from="exit_button" to="." method="_on_exit_button_released"]

[connection signal="released" from="difficulty_button" to="." method="_on_difficulty_button_released"]

[connection signal="released" from="turn_button" to="." method="_on_turn_button_released"]


